Reordenación de archivos y adición de luces

--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
 <script src="../libs/colorpicker/js/colorpicker.js"></script>
 
 <script src="../libs/three.js/loaders/OBJLoader.js"></script>
-<script src="MTLLoader.js"></script>
+<script src="js/MTLLoader.js"></script>
 
 <script src="../libs/tween.js/tween.js"></script>
 <script src="../libs/keyframe.js/keyframe.js"></script>
 
-<script src="threejsKeyframe.js"></script>
-<script src="ui.js"></script>
+<script src="js/threejsKeyframe.js"></script>
 
 <script type="text/javascript">
 	$(document).ready(
