--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <link rel="stylesheet" href="../libs/jquery-ui/jquery-ui.css" />
 <link rel="stylesheet" href="../libs/colorpicker/css/colorpicker.css" />
 <link rel="stylesheet" href="css/main.css" />
-<link rel="stylesheet" href="css/keyframeanimation.css" />
 
 <script src="../libs/jquery-3.3.1/jquery-3.3.1.js"></script>
 <script src="../libs/jquery-ui/jquery-ui.js"></script>
@@ -53,7 +52,7 @@
 			Three.js Keyframe
 		</div>
 		<div id="prompt">
-			<br>Orbit&emsp;&emsp;Use left mouse or one-finger move to touch
+			<br>Move&emsp;&emsp;Use left mouse or one-finger move to touch
 			<br>Zoom &emsp; Use middle mouse/mousewheel or two-finger spread/squish to touch
 			<br>Pan &emsp;&emsp;Use right mouse/ arrow keys or two-finger move to touch
 		</div>
